queue aurorae decoration button events to prevent them from destroying the scene in the same event cycle

BUG: 242116
REVIEW: 103336